update badge
